Add suggested SBT configuration options, and some more blurbs.