@@ -1,9 +1,14 @@
-Tutorials on [Lightweight Modular Staging](http://scala-lms.github.io)
+Tutorials on [LMS](http://scala-lms.github.io)
 ======================================================================
+
+Lightweight Modular Staging (LMS) is a framework for runtime code generation and compiled DSLs.
 
 Dependencies
 ------------
 
+* [SBT](http://www.scala-sbt.org/)
+  * Create or edit the file `~/.sbtconfig` to contain the following options for the JVM:
+      `SBT_OPTS="-Xms3G -Xmx3G -Xss1M -XX:MaxPermSize=192M -XX:+UseParallelGC"`
 * [LMS](https://github.com/TiarkRompf/virtualization-lms-core):
   * `git clone https://github.com/TiarkRompf/virtualization-lms-core.git`
   * `sbt publish-local`
